--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -70,6 +70,9 @@
         "typeinfo": "cpp",
         "valarray": "cpp",
         "variant": "cpp",
-        "*.ipp": "cpp"
+        "*.ipp": "cpp",
+        "any": "cpp",
+        "hash_map": "cpp",
+        "hash_set": "cpp"
     }
 }
