--- a/Control/bug record/keyboard_test/CMakeLists.txt
+++ b/Control/bug record/keyboard_test/CMakeLists.txt
@@ -1,17 +1,20 @@
-# 设置 CMake 的最低版本要求
-cmake_minimum_required(VERSION 3.0)
+cmake_minimum_required(VERSION 3.10)
 
-# 设置项目名称和语言
+# 项目名称
 project(main)
 
-# 设置 C 编译器的标准
-set(CMAKE_C_STANDARD 99)
+# 设置C++标准
+set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD_REQUIRED True)
+
+# 添加源文件
+set(SOURCES
+    main.cpp
+    keyboard.cpp
+)
 
 # 添加可执行文件
-add_executable(main main.cpp)
+add_executable(main ${SOURCES})
 
-# 如果需要链接特定的库（例如 termios），可以在这里添加
-# target_link_libraries(keyboard_example termios)
-
-# 如果需要包含特定的头文件目录，可以在这里添加
-# include_directories(/path/to/headers)
+# 链接 pthread 库
+target_link_libraries(main pthread)
